tests/errors/macro/parser_unexpected_grid/kw_behind_lexeme_with_comm.c
int a = 1;
/* */ l #define a 0

#include /*comment*/"file"

int main()
{
	assert(a, "lexeme before kw");

	return 0;
}
